# Python-Data-Science-Course

./: .gitignore  README.md  pyproject.toml
notebooks/: 01-python-fundamentals.ipynb  02-data-structures.ipynb  03-control-flow.ipynb  04-functions.ipynb  05-file-handling.ipynb  06-exploratory-data-analysis.ipynb  06-numpy-fundamentals.ipynb  07-data-cleaning-and-preprocessing.ipynb  07-pandas-for-data-analysis.ipynb  08-data-visualization.ipynb  08-statistics-for-data-science.ipynb  09-linear-algebra.ipynb  10-calculus-for-ml.ipynb  11-probability-theory.ipynb  12-introduction-to-machine-learning.ipynb  12-introduction-to-ml.ipynb  13-capstone-projects.ipynb  13-linear-regression.ipynb  14-logistic-regression.ipynb  15-classification-algorithms.ipynb  16-unsupervised-learning.ipynb  17-model-optimization.ipynb
notebooks/assets/datasets/: config.json  employees.csv  meeting_notes.txt  products.json  sales_data.csv  server_log.txt
